feat: Suricata fully initialized
